[project]
name = "langgraph-checkpoint-singlestore"
dynamic = ["version"]
description = "LangGraph CheckpointSaver implementation using SingleStore database"
readme = "README.md"
authors = [
    { name = "Prudhvi", email = "pakula@singlestore.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.28.1",
    "langgraph-checkpoint>=2.1.1",
    "pydantic>=2.11.7",
    "pytest-httpx>=0.35.0",
    "singlestoredb>=1.15.0",
    "langchain-core>=1.2.5,<2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
]
dev = [
    "langgraph-checkpoint-singlestore[test]",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/singlestore-labs/langgraph-checkpointer-singlestore"
"Bug Tracker" = "https://github.com/singlestore-labs/langgraph-checkpointer-singlestore/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["langgraph"]

[tool.hatch.version]
path = "langgraph/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=langgraph.checkpoint.singlestore",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "no_db: mark test to skip database setup and connections",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["langgraph"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
]

[dependency-groups]
dev = [
    "pyrefly>=0.26.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

